// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert component functionality test  matches snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Alert
    action={[MockFunction]}
    actionButtonLabel="button"
    allowDismiss={true}
    classes={Object {}}
    dismissAction={[MockFunction]}
    dismissTitle="Click to dismiss this alert"
    message="Message"
    showLoader={false}
    theme={Object {}}
    title="Title"
    type="warning"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <WithStyles(Grid)
        alignContent="center"
        alignItems="flex-start"
        className=""
        container={true}
        justify="center"
        spacing={24}
      >
        <WithStyles(Grid)
          className={undefined}
          item={true}
          sm={true}
          xs={12}
        >
          <WithStyles(Grid)
            alignContent="center"
            alignItems="flex-start"
            container={true}
            justify="center"
          >
            <WithStyles(Grid)
              className={undefined}
              id="icon"
              item={true}
              onClick={[MockFunction]}
              onKeyDown={[MockFunction]}
            >
              <pure(WarningIcon)
                className="icon"
              />
            </WithStyles(Grid)>
            <WithStyles(Grid)
              className={undefined}
              id="text"
              item={true}
              onClick={[MockFunction]}
              onKeyDown={[MockFunction]}
              xs={true}
            >
              <b>
                Title - 
              </b>
              Message
            </WithStyles(Grid)>
            <Hidden
              implementation="js"
              lgDown={false}
              lgUp={false}
              mdDown={false}
              mdUp={false}
              smDown={false}
              smUp={true}
              xlDown={false}
              xlUp={false}
              xsDown={false}
              xsUp={false}
            >
              <WithStyles(Grid)
                className={undefined}
                item={true}
              >
                <WithStyles(IconButton)
                  aria-label="Click to dismiss this alert"
                  id="dismiss"
                  onClick={[MockFunction]}
                  title="Click to dismiss this alert"
                >
                  <pure(CloseIcon)
                    className="dismiss"
                  />
                </WithStyles(IconButton)>
              </WithStyles(Grid)>
            </Hidden>
          </WithStyles(Grid)>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          className={undefined}
          item={true}
          sm="auto"
          xs={true}
        >
          <WithStyles(Button)
            className="action"
            fullWidth={true}
            id="alertButton"
            onClick={[MockFunction]}
            variant="text"
          >
            button
          </WithStyles(Button)>
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={true}
          xsUp={false}
        >
          <WithStyles(Grid)
            className={undefined}
            item={true}
          >
            <WithStyles(IconButton)
              aria-label="Click to dismiss this alert"
              id="dismiss"
              onClick={[MockFunction]}
              title="Click to dismiss this alert"
            >
              <pure(CloseIcon)
                className="dismiss"
              />
            </WithStyles(IconButton)>
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>,
      "className": "Alert",
      "style": Object {
        "padding": 12,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "alignContent": "center",
        "alignItems": "flex-start",
        "children": Array [
          <WithStyles(Grid)
            className={undefined}
            item={true}
            sm={true}
            xs={12}
          >
            <WithStyles(Grid)
              alignContent="center"
              alignItems="flex-start"
              container={true}
              justify="center"
            >
              <WithStyles(Grid)
                className={undefined}
                id="icon"
                item={true}
                onClick={[MockFunction]}
                onKeyDown={[MockFunction]}
              >
                <pure(WarningIcon)
                  className="icon"
                />
              </WithStyles(Grid)>
              <WithStyles(Grid)
                className={undefined}
                id="text"
                item={true}
                onClick={[MockFunction]}
                onKeyDown={[MockFunction]}
                xs={true}
              >
                <b>
                  Title - 
                </b>
                Message
              </WithStyles(Grid)>
              <Hidden
                implementation="js"
                lgDown={false}
                lgUp={false}
                mdDown={false}
                mdUp={false}
                smDown={false}
                smUp={true}
                xlDown={false}
                xlUp={false}
                xsDown={false}
                xsUp={false}
              >
                <WithStyles(Grid)
                  className={undefined}
                  item={true}
                >
                  <WithStyles(IconButton)
                    aria-label="Click to dismiss this alert"
                    id="dismiss"
                    onClick={[MockFunction]}
                    title="Click to dismiss this alert"
                  >
                    <pure(CloseIcon)
                      className="dismiss"
                    />
                  </WithStyles(IconButton)>
                </WithStyles(Grid)>
              </Hidden>
            </WithStyles(Grid)>
          </WithStyles(Grid)>,
          <WithStyles(Grid)
            className={undefined}
            item={true}
            sm="auto"
            xs={true}
          >
            <WithStyles(Button)
              className="action"
              fullWidth={true}
              id="alertButton"
              onClick={[MockFunction]}
              variant="text"
            >
              button
            </WithStyles(Button)>
          </WithStyles(Grid)>,
          <Hidden
            implementation="js"
            lgDown={false}
            lgUp={false}
            mdDown={false}
            mdUp={false}
            smDown={false}
            smUp={false}
            xlDown={false}
            xlUp={false}
            xsDown={true}
            xsUp={false}
          >
            <WithStyles(Grid)
              className={undefined}
              item={true}
            >
              <WithStyles(IconButton)
                aria-label="Click to dismiss this alert"
                id="dismiss"
                onClick={[MockFunction]}
                title="Click to dismiss this alert"
              >
                <pure(CloseIcon)
                  className="dismiss"
                />
              </WithStyles(IconButton)>
            </WithStyles(Grid)>
          </Hidden>,
        ],
        "className": "",
        "container": true,
        "justify": "center",
        "spacing": 24,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <WithStyles(Grid)
              alignContent="center"
              alignItems="flex-start"
              container={true}
              justify="center"
            >
              <WithStyles(Grid)
                className={undefined}
                id="icon"
                item={true}
                onClick={[MockFunction]}
                onKeyDown={[MockFunction]}
              >
                <pure(WarningIcon)
                  className="icon"
                />
              </WithStyles(Grid)>
              <WithStyles(Grid)
                className={undefined}
                id="text"
                item={true}
                onClick={[MockFunction]}
                onKeyDown={[MockFunction]}
                xs={true}
              >
                <b>
                  Title - 
                </b>
                Message
              </WithStyles(Grid)>
              <Hidden
                implementation="js"
                lgDown={false}
                lgUp={false}
                mdDown={false}
                mdUp={false}
                smDown={false}
                smUp={true}
                xlDown={false}
                xlUp={false}
                xsDown={false}
                xsUp={false}
              >
                <WithStyles(Grid)
                  className={undefined}
                  item={true}
                >
                  <WithStyles(IconButton)
                    aria-label="Click to dismiss this alert"
                    id="dismiss"
                    onClick={[MockFunction]}
                    title="Click to dismiss this alert"
                  >
                    <pure(CloseIcon)
                      className="dismiss"
                    />
                  </WithStyles(IconButton)>
                </WithStyles(Grid)>
              </Hidden>
            </WithStyles(Grid)>,
            "className": undefined,
            "item": true,
            "sm": true,
            "xs": 12,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "alignContent": "center",
              "alignItems": "flex-start",
              "children": Array [
                <WithStyles(Grid)
                  className={undefined}
                  id="icon"
                  item={true}
                  onClick={[MockFunction]}
                  onKeyDown={[MockFunction]}
                >
                  <pure(WarningIcon)
                    className="icon"
                  />
                </WithStyles(Grid)>,
                <WithStyles(Grid)
                  className={undefined}
                  id="text"
                  item={true}
                  onClick={[MockFunction]}
                  onKeyDown={[MockFunction]}
                  xs={true}
                >
                  <b>
                    Title - 
                  </b>
                  Message
                </WithStyles(Grid)>,
                <Hidden
                  implementation="js"
                  lgDown={false}
                  lgUp={false}
                  mdDown={false}
                  mdUp={false}
                  smDown={false}
                  smUp={true}
                  xlDown={false}
                  xlUp={false}
                  xsDown={false}
                  xsUp={false}
                >
                  <WithStyles(Grid)
                    className={undefined}
                    item={true}
                  >
                    <WithStyles(IconButton)
                      aria-label="Click to dismiss this alert"
                      id="dismiss"
                      onClick={[MockFunction]}
                      title="Click to dismiss this alert"
                    >
                      <pure(CloseIcon)
                        className="dismiss"
                      />
                    </WithStyles(IconButton)>
                  </WithStyles(Grid)>
                </Hidden>,
              ],
              "container": true,
              "justify": "center",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <pure(WarningIcon)
                    className="icon"
                  />,
                  "className": undefined,
                  "id": "icon",
                  "item": true,
                  "onClick": [MockFunction],
                  "onKeyDown": [MockFunction],
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "className": "icon",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <b>
                      Title - 
                    </b>,
                    "Message",
                  ],
                  "className": undefined,
                  "id": "text",
                  "item": true,
                  "onClick": [MockFunction],
                  "onKeyDown": [MockFunction],
                  "xs": true,
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Title - ",
                    },
                    "ref": null,
                    "rendered": "Title - ",
                    "type": "b",
                  },
                  "Message",
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": <WithStyles(Grid)
                    className={undefined}
                    item={true}
                  >
                    <WithStyles(IconButton)
                      aria-label="Click to dismiss this alert"
                      id="dismiss"
                      onClick={[MockFunction]}
                      title="Click to dismiss this alert"
                    >
                      <pure(CloseIcon)
                        className="dismiss"
                      />
                    </WithStyles(IconButton)>
                  </WithStyles(Grid)>,
                  "implementation": "js",
                  "lgDown": false,
                  "lgUp": false,
                  "mdDown": false,
                  "mdUp": false,
                  "smDown": false,
                  "smUp": true,
                  "xlDown": false,
                  "xlUp": false,
                  "xsDown": false,
                  "xsUp": false,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <WithStyles(IconButton)
                      aria-label="Click to dismiss this alert"
                      id="dismiss"
                      onClick={[MockFunction]}
                      title="Click to dismiss this alert"
                    >
                      <pure(CloseIcon)
                        className="dismiss"
                      />
                    </WithStyles(IconButton)>,
                    "className": undefined,
                    "item": true,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "aria-label": "Click to dismiss this alert",
                      "children": <pure(CloseIcon)
                        className="dismiss"
                      />,
                      "id": "dismiss",
                      "onClick": [MockFunction],
                      "title": "Click to dismiss this alert",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "className": "dismiss",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                  "type": [Function],
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <WithStyles(Button)
              className="action"
              fullWidth={true}
              id="alertButton"
              onClick={[MockFunction]}
              variant="text"
            >
              button
            </WithStyles(Button)>,
            "className": undefined,
            "item": true,
            "sm": "auto",
            "xs": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "button",
              "className": "action",
              "fullWidth": true,
              "id": "alertButton",
              "onClick": [MockFunction],
              "variant": "text",
            },
            "ref": null,
            "rendered": "button",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <WithStyles(Grid)
              className={undefined}
              item={true}
            >
              <WithStyles(IconButton)
                aria-label="Click to dismiss this alert"
                id="dismiss"
                onClick={[MockFunction]}
                title="Click to dismiss this alert"
              >
                <pure(CloseIcon)
                  className="dismiss"
                />
              </WithStyles(IconButton)>
            </WithStyles(Grid)>,
            "implementation": "js",
            "lgDown": false,
            "lgUp": false,
            "mdDown": false,
            "mdUp": false,
            "smDown": false,
            "smUp": false,
            "xlDown": false,
            "xlUp": false,
            "xsDown": true,
            "xsUp": false,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <WithStyles(IconButton)
                aria-label="Click to dismiss this alert"
                id="dismiss"
                onClick={[MockFunction]}
                title="Click to dismiss this alert"
              >
                <pure(CloseIcon)
                  className="dismiss"
                />
              </WithStyles(IconButton)>,
              "className": undefined,
              "item": true,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "aria-label": "Click to dismiss this alert",
                "children": <pure(CloseIcon)
                  className="dismiss"
                />,
                "id": "dismiss",
                "onClick": [MockFunction],
                "title": "Click to dismiss this alert",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "className": "dismiss",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <WithStyles(Grid)
          alignContent="center"
          alignItems="flex-start"
          className=""
          container={true}
          justify="center"
          spacing={24}
        >
          <WithStyles(Grid)
            className={undefined}
            item={true}
            sm={true}
            xs={12}
          >
            <WithStyles(Grid)
              alignContent="center"
              alignItems="flex-start"
              container={true}
              justify="center"
            >
              <WithStyles(Grid)
                className={undefined}
                id="icon"
                item={true}
                onClick={[MockFunction]}
                onKeyDown={[MockFunction]}
              >
                <pure(WarningIcon)
                  className="icon"
                />
              </WithStyles(Grid)>
              <WithStyles(Grid)
                className={undefined}
                id="text"
                item={true}
                onClick={[MockFunction]}
                onKeyDown={[MockFunction]}
                xs={true}
              >
                <b>
                  Title - 
                </b>
                Message
              </WithStyles(Grid)>
              <Hidden
                implementation="js"
                lgDown={false}
                lgUp={false}
                mdDown={false}
                mdUp={false}
                smDown={false}
                smUp={true}
                xlDown={false}
                xlUp={false}
                xsDown={false}
                xsUp={false}
              >
                <WithStyles(Grid)
                  className={undefined}
                  item={true}
                >
                  <WithStyles(IconButton)
                    aria-label="Click to dismiss this alert"
                    id="dismiss"
                    onClick={[MockFunction]}
                    title="Click to dismiss this alert"
                  >
                    <pure(CloseIcon)
                      className="dismiss"
                    />
                  </WithStyles(IconButton)>
                </WithStyles(Grid)>
              </Hidden>
            </WithStyles(Grid)>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            className={undefined}
            item={true}
            sm="auto"
            xs={true}
          >
            <WithStyles(Button)
              className="action"
              fullWidth={true}
              id="alertButton"
              onClick={[MockFunction]}
              variant="text"
            >
              button
            </WithStyles(Button)>
          </WithStyles(Grid)>
          <Hidden
            implementation="js"
            lgDown={false}
            lgUp={false}
            mdDown={false}
            mdUp={false}
            smDown={false}
            smUp={false}
            xlDown={false}
            xlUp={false}
            xsDown={true}
            xsUp={false}
          >
            <WithStyles(Grid)
              className={undefined}
              item={true}
            >
              <WithStyles(IconButton)
                aria-label="Click to dismiss this alert"
                id="dismiss"
                onClick={[MockFunction]}
                title="Click to dismiss this alert"
              >
                <pure(CloseIcon)
                  className="dismiss"
                />
              </WithStyles(IconButton)>
            </WithStyles(Grid)>
          </Hidden>
        </WithStyles(Grid)>,
        "className": "Alert",
        "style": Object {
          "padding": 12,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "alignContent": "center",
          "alignItems": "flex-start",
          "children": Array [
            <WithStyles(Grid)
              className={undefined}
              item={true}
              sm={true}
              xs={12}
            >
              <WithStyles(Grid)
                alignContent="center"
                alignItems="flex-start"
                container={true}
                justify="center"
              >
                <WithStyles(Grid)
                  className={undefined}
                  id="icon"
                  item={true}
                  onClick={[MockFunction]}
                  onKeyDown={[MockFunction]}
                >
                  <pure(WarningIcon)
                    className="icon"
                  />
                </WithStyles(Grid)>
                <WithStyles(Grid)
                  className={undefined}
                  id="text"
                  item={true}
                  onClick={[MockFunction]}
                  onKeyDown={[MockFunction]}
                  xs={true}
                >
                  <b>
                    Title - 
                  </b>
                  Message
                </WithStyles(Grid)>
                <Hidden
                  implementation="js"
                  lgDown={false}
                  lgUp={false}
                  mdDown={false}
                  mdUp={false}
                  smDown={false}
                  smUp={true}
                  xlDown={false}
                  xlUp={false}
                  xsDown={false}
                  xsUp={false}
                >
                  <WithStyles(Grid)
                    className={undefined}
                    item={true}
                  >
                    <WithStyles(IconButton)
                      aria-label="Click to dismiss this alert"
                      id="dismiss"
                      onClick={[MockFunction]}
                      title="Click to dismiss this alert"
                    >
                      <pure(CloseIcon)
                        className="dismiss"
                      />
                    </WithStyles(IconButton)>
                  </WithStyles(Grid)>
                </Hidden>
              </WithStyles(Grid)>
            </WithStyles(Grid)>,
            <WithStyles(Grid)
              className={undefined}
              item={true}
              sm="auto"
              xs={true}
            >
              <WithStyles(Button)
                className="action"
                fullWidth={true}
                id="alertButton"
                onClick={[MockFunction]}
                variant="text"
              >
                button
              </WithStyles(Button)>
            </WithStyles(Grid)>,
            <Hidden
              implementation="js"
              lgDown={false}
              lgUp={false}
              mdDown={false}
              mdUp={false}
              smDown={false}
              smUp={false}
              xlDown={false}
              xlUp={false}
              xsDown={true}
              xsUp={false}
            >
              <WithStyles(Grid)
                className={undefined}
                item={true}
              >
                <WithStyles(IconButton)
                  aria-label="Click to dismiss this alert"
                  id="dismiss"
                  onClick={[MockFunction]}
                  title="Click to dismiss this alert"
                >
                  <pure(CloseIcon)
                    className="dismiss"
                  />
                </WithStyles(IconButton)>
              </WithStyles(Grid)>
            </Hidden>,
          ],
          "className": "",
          "container": true,
          "justify": "center",
          "spacing": 24,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <WithStyles(Grid)
                alignContent="center"
                alignItems="flex-start"
                container={true}
                justify="center"
              >
                <WithStyles(Grid)
                  className={undefined}
                  id="icon"
                  item={true}
                  onClick={[MockFunction]}
                  onKeyDown={[MockFunction]}
                >
                  <pure(WarningIcon)
                    className="icon"
                  />
                </WithStyles(Grid)>
                <WithStyles(Grid)
                  className={undefined}
                  id="text"
                  item={true}
                  onClick={[MockFunction]}
                  onKeyDown={[MockFunction]}
                  xs={true}
                >
                  <b>
                    Title - 
                  </b>
                  Message
                </WithStyles(Grid)>
                <Hidden
                  implementation="js"
                  lgDown={false}
                  lgUp={false}
                  mdDown={false}
                  mdUp={false}
                  smDown={false}
                  smUp={true}
                  xlDown={false}
                  xlUp={false}
                  xsDown={false}
                  xsUp={false}
                >
                  <WithStyles(Grid)
                    className={undefined}
                    item={true}
                  >
                    <WithStyles(IconButton)
                      aria-label="Click to dismiss this alert"
                      id="dismiss"
                      onClick={[MockFunction]}
                      title="Click to dismiss this alert"
                    >
                      <pure(CloseIcon)
                        className="dismiss"
                      />
                    </WithStyles(IconButton)>
                  </WithStyles(Grid)>
                </Hidden>
              </WithStyles(Grid)>,
              "className": undefined,
              "item": true,
              "sm": true,
              "xs": 12,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "alignContent": "center",
                "alignItems": "flex-start",
                "children": Array [
                  <WithStyles(Grid)
                    className={undefined}
                    id="icon"
                    item={true}
                    onClick={[MockFunction]}
                    onKeyDown={[MockFunction]}
                  >
                    <pure(WarningIcon)
                      className="icon"
                    />
                  </WithStyles(Grid)>,
                  <WithStyles(Grid)
                    className={undefined}
                    id="text"
                    item={true}
                    onClick={[MockFunction]}
                    onKeyDown={[MockFunction]}
                    xs={true}
                  >
                    <b>
                      Title - 
                    </b>
                    Message
                  </WithStyles(Grid)>,
                  <Hidden
                    implementation="js"
                    lgDown={false}
                    lgUp={false}
                    mdDown={false}
                    mdUp={false}
                    smDown={false}
                    smUp={true}
                    xlDown={false}
                    xlUp={false}
                    xsDown={false}
                    xsUp={false}
                  >
                    <WithStyles(Grid)
                      className={undefined}
                      item={true}
                    >
                      <WithStyles(IconButton)
                        aria-label="Click to dismiss this alert"
                        id="dismiss"
                        onClick={[MockFunction]}
                        title="Click to dismiss this alert"
                      >
                        <pure(CloseIcon)
                          className="dismiss"
                        />
                      </WithStyles(IconButton)>
                    </WithStyles(Grid)>
                  </Hidden>,
                ],
                "container": true,
                "justify": "center",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <pure(WarningIcon)
                      className="icon"
                    />,
                    "className": undefined,
                    "id": "icon",
                    "item": true,
                    "onClick": [MockFunction],
                    "onKeyDown": [MockFunction],
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "className": "icon",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      <b>
                        Title - 
                      </b>,
                      "Message",
                    ],
                    "className": undefined,
                    "id": "text",
                    "item": true,
                    "onClick": [MockFunction],
                    "onKeyDown": [MockFunction],
                    "xs": true,
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Title - ",
                      },
                      "ref": null,
                      "rendered": "Title - ",
                      "type": "b",
                    },
                    "Message",
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": <WithStyles(Grid)
                      className={undefined}
                      item={true}
                    >
                      <WithStyles(IconButton)
                        aria-label="Click to dismiss this alert"
                        id="dismiss"
                        onClick={[MockFunction]}
                        title="Click to dismiss this alert"
                      >
                        <pure(CloseIcon)
                          className="dismiss"
                        />
                      </WithStyles(IconButton)>
                    </WithStyles(Grid)>,
                    "implementation": "js",
                    "lgDown": false,
                    "lgUp": false,
                    "mdDown": false,
                    "mdUp": false,
                    "smDown": false,
                    "smUp": true,
                    "xlDown": false,
                    "xlUp": false,
                    "xsDown": false,
                    "xsUp": false,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <WithStyles(IconButton)
                        aria-label="Click to dismiss this alert"
                        id="dismiss"
                        onClick={[MockFunction]}
                        title="Click to dismiss this alert"
                      >
                        <pure(CloseIcon)
                          className="dismiss"
                        />
                      </WithStyles(IconButton)>,
                      "className": undefined,
                      "item": true,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "aria-label": "Click to dismiss this alert",
                        "children": <pure(CloseIcon)
                          className="dismiss"
                        />,
                        "id": "dismiss",
                        "onClick": [MockFunction],
                        "title": "Click to dismiss this alert",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "className": "dismiss",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <WithStyles(Button)
                className="action"
                fullWidth={true}
                id="alertButton"
                onClick={[MockFunction]}
                variant="text"
              >
                button
              </WithStyles(Button)>,
              "className": undefined,
              "item": true,
              "sm": "auto",
              "xs": true,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "button",
                "className": "action",
                "fullWidth": true,
                "id": "alertButton",
                "onClick": [MockFunction],
                "variant": "text",
              },
              "ref": null,
              "rendered": "button",
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <WithStyles(Grid)
                className={undefined}
                item={true}
              >
                <WithStyles(IconButton)
                  aria-label="Click to dismiss this alert"
                  id="dismiss"
                  onClick={[MockFunction]}
                  title="Click to dismiss this alert"
                >
                  <pure(CloseIcon)
                    className="dismiss"
                  />
                </WithStyles(IconButton)>
              </WithStyles(Grid)>,
              "implementation": "js",
              "lgDown": false,
              "lgUp": false,
              "mdDown": false,
              "mdUp": false,
              "smDown": false,
              "smUp": false,
              "xlDown": false,
              "xlUp": false,
              "xsDown": true,
              "xsUp": false,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <WithStyles(IconButton)
                  aria-label="Click to dismiss this alert"
                  id="dismiss"
                  onClick={[MockFunction]}
                  title="Click to dismiss this alert"
                >
                  <pure(CloseIcon)
                    className="dismiss"
                  />
                </WithStyles(IconButton)>,
                "className": undefined,
                "item": true,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "aria-label": "Click to dismiss this alert",
                  "children": <pure(CloseIcon)
                    className="dismiss"
                  />,
                  "id": "dismiss",
                  "onClick": [MockFunction],
                  "title": "Click to dismiss this alert",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "className": "dismiss",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Alert component functionality test  should render correct icon based on type "done" 1`] = `
<div
  className="Alert"
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    alignContent="center"
    alignItems="flex-start"
    className=""
    container={true}
    justify="center"
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      sm={true}
      xs={12}
    >
      <WithStyles(Grid)
        alignContent="center"
        alignItems="flex-start"
        container={true}
        justify="center"
      >
        <WithStyles(Grid)
          id="icon"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
        >
          <pure(DoneIcon)
            className="icon"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          id="text"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
          xs={true}
        >
          <b>
            Title - 
          </b>
          Message
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={true}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
          >
            <WithStyles(IconButton)
              aria-label="Click to dismiss this alert"
              id="dismiss"
              onClick={[MockFunction]}
              title="Click to dismiss this alert"
            >
              <pure(CloseIcon)
                className="dismiss"
              />
            </WithStyles(IconButton)>
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm="auto"
      xs={true}
    >
      <WithStyles(Button)
        className="action"
        fullWidth={true}
        id="alertButton"
        onClick={[MockFunction]}
        variant="text"
      >
        button
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          aria-label="Click to dismiss this alert"
          id="dismiss"
          onClick={[MockFunction]}
          title="Click to dismiss this alert"
        >
          <pure(CloseIcon)
            className="dismiss"
          />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
</div>
`;

exports[`Alert component functionality test  should render correct icon based on type "error_outline" 1`] = `
<div
  className="Alert"
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    alignContent="center"
    alignItems="flex-start"
    className=""
    container={true}
    justify="center"
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      sm={true}
      xs={12}
    >
      <WithStyles(Grid)
        alignContent="center"
        alignItems="flex-start"
        container={true}
        justify="center"
      >
        <WithStyles(Grid)
          id="icon"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
        >
          <pure(ErrorOutlineIcon)
            className="icon"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          id="text"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
          xs={true}
        >
          <b>
            Title - 
          </b>
          Message
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={true}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
          >
            <WithStyles(IconButton)
              aria-label="Click to dismiss this alert"
              id="dismiss"
              onClick={[MockFunction]}
              title="Click to dismiss this alert"
            >
              <pure(CloseIcon)
                className="dismiss"
              />
            </WithStyles(IconButton)>
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm="auto"
      xs={true}
    >
      <WithStyles(Button)
        className="action"
        fullWidth={true}
        id="alertButton"
        onClick={[MockFunction]}
        variant="text"
      >
        button
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          aria-label="Click to dismiss this alert"
          id="dismiss"
          onClick={[MockFunction]}
          title="Click to dismiss this alert"
        >
          <pure(CloseIcon)
            className="dismiss"
          />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
</div>
`;

exports[`Alert component functionality test  should render correct icon based on type "help" 1`] = `
<div
  className="Alert"
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    alignContent="center"
    alignItems="flex-start"
    className=""
    container={true}
    justify="center"
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      sm={true}
      xs={12}
    >
      <WithStyles(Grid)
        alignContent="center"
        alignItems="flex-start"
        container={true}
        justify="center"
      >
        <WithStyles(Grid)
          id="icon"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
        >
          <pure(HelpIcon)
            className="icon"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          id="text"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
          xs={true}
        >
          <b>
            Title - 
          </b>
          Message
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={true}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
          >
            <WithStyles(IconButton)
              aria-label="Click to dismiss this alert"
              id="dismiss"
              onClick={[MockFunction]}
              title="Click to dismiss this alert"
            >
              <pure(CloseIcon)
                className="dismiss"
              />
            </WithStyles(IconButton)>
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm="auto"
      xs={true}
    >
      <WithStyles(Button)
        className="action"
        fullWidth={true}
        id="alertButton"
        onClick={[MockFunction]}
        variant="text"
      >
        button
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          aria-label="Click to dismiss this alert"
          id="dismiss"
          onClick={[MockFunction]}
          title="Click to dismiss this alert"
        >
          <pure(CloseIcon)
            className="dismiss"
          />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
</div>
`;

exports[`Alert component functionality test  should render correct icon based on type "help_outline" 1`] = `
<div
  className="Alert"
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    alignContent="center"
    alignItems="flex-start"
    className=""
    container={true}
    justify="center"
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      sm={true}
      xs={12}
    >
      <WithStyles(Grid)
        alignContent="center"
        alignItems="flex-start"
        container={true}
        justify="center"
      >
        <WithStyles(Grid)
          id="icon"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
        >
          <pure(HelpOutlineIcon)
            className="icon"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          id="text"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
          xs={true}
        >
          <b>
            Title - 
          </b>
          Message
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={true}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
          >
            <WithStyles(IconButton)
              aria-label="Click to dismiss this alert"
              id="dismiss"
              onClick={[MockFunction]}
              title="Click to dismiss this alert"
            >
              <pure(CloseIcon)
                className="dismiss"
              />
            </WithStyles(IconButton)>
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm="auto"
      xs={true}
    >
      <WithStyles(Button)
        className="action"
        fullWidth={true}
        id="alertButton"
        onClick={[MockFunction]}
        variant="text"
      >
        button
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          aria-label="Click to dismiss this alert"
          id="dismiss"
          onClick={[MockFunction]}
          title="Click to dismiss this alert"
        >
          <pure(CloseIcon)
            className="dismiss"
          />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
</div>
`;

exports[`Alert component functionality test  should render correct icon based on type "info" 1`] = `
<div
  className="Alert"
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    alignContent="center"
    alignItems="flex-start"
    className=""
    container={true}
    justify="center"
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      sm={true}
      xs={12}
    >
      <WithStyles(Grid)
        alignContent="center"
        alignItems="flex-start"
        container={true}
        justify="center"
      >
        <WithStyles(Grid)
          id="icon"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
        >
          <pure(InfoIcon)
            className="icon"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          id="text"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
          xs={true}
        >
          <b>
            Title - 
          </b>
          Message
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={true}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
          >
            <WithStyles(IconButton)
              aria-label="Click to dismiss this alert"
              id="dismiss"
              onClick={[MockFunction]}
              title="Click to dismiss this alert"
            >
              <pure(CloseIcon)
                className="dismiss"
              />
            </WithStyles(IconButton)>
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm="auto"
      xs={true}
    >
      <WithStyles(Button)
        className="action"
        fullWidth={true}
        id="alertButton"
        onClick={[MockFunction]}
        variant="text"
      >
        button
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          aria-label="Click to dismiss this alert"
          id="dismiss"
          onClick={[MockFunction]}
          title="Click to dismiss this alert"
        >
          <pure(CloseIcon)
            className="dismiss"
          />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
</div>
`;

exports[`Alert component functionality test  should render correct icon based on type "info_outline" 1`] = `
<div
  className="Alert"
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    alignContent="center"
    alignItems="flex-start"
    className=""
    container={true}
    justify="center"
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      sm={true}
      xs={12}
    >
      <WithStyles(Grid)
        alignContent="center"
        alignItems="flex-start"
        container={true}
        justify="center"
      >
        <WithStyles(Grid)
          id="icon"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
        >
          <pure(InfoOutlinedIcon)
            className="icon"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          id="text"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
          xs={true}
        >
          <b>
            Title - 
          </b>
          Message
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={true}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
          >
            <WithStyles(IconButton)
              aria-label="Click to dismiss this alert"
              id="dismiss"
              onClick={[MockFunction]}
              title="Click to dismiss this alert"
            >
              <pure(CloseIcon)
                className="dismiss"
              />
            </WithStyles(IconButton)>
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm="auto"
      xs={true}
    >
      <WithStyles(Button)
        className="action"
        fullWidth={true}
        id="alertButton"
        onClick={[MockFunction]}
        variant="text"
      >
        button
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          aria-label="Click to dismiss this alert"
          id="dismiss"
          onClick={[MockFunction]}
          title="Click to dismiss this alert"
        >
          <pure(CloseIcon)
            className="dismiss"
          />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
</div>
`;

exports[`Alert component functionality test  should render correct icon for default 1`] = `
<div
  className="Alert"
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    alignContent="center"
    alignItems="flex-start"
    className=""
    container={true}
    justify="center"
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      sm={true}
      xs={12}
    >
      <WithStyles(Grid)
        alignContent="center"
        alignItems="flex-start"
        container={true}
        justify="center"
      >
        <WithStyles(Grid)
          id="icon"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
        >
          <pure(ErrorIcon)
            className="icon"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          id="text"
          item={true}
          onClick={[MockFunction]}
          onKeyDown={[MockFunction]}
          xs={true}
        >
          <b>
            Title - 
          </b>
          Message
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={false}
          smDown={false}
          smUp={true}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
          >
            <WithStyles(IconButton)
              aria-label="Click to dismiss this alert"
              id="dismiss"
              onClick={[MockFunction]}
              title="Click to dismiss this alert"
            >
              <pure(CloseIcon)
                className="dismiss"
              />
            </WithStyles(IconButton)>
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm="auto"
      xs={true}
    >
      <WithStyles(Button)
        className="action"
        fullWidth={true}
        id="alertButton"
        onClick={[MockFunction]}
        variant="text"
      >
        button
      </WithStyles(Button)>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          aria-label="Click to dismiss this alert"
          id="dismiss"
          onClick={[MockFunction]}
          title="Click to dismiss this alert"
        >
          <pure(CloseIcon)
            className="dismiss"
          />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
</div>
`;
